# conftube

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: main.yml  release.yml
backend/: .env.dist  Cargo.toml  GraphRoot.ts  README.md  index.ts  package-lock.json  package.json  requests.http  user.ts  videos.ts  youtube.ts
backend/migrations/2023-04-14-182428_create_user/: up.sql
backend/migrations/2023-04-14-183211_create_video/: up.sql
backend/migrations/2023-04-14-183602_create_ratings/: up.sql
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20230221202540_first_migration/: migration.sql
backend/prisma/migrations/20230223132421_first_migration/: migration.sql
backend/prisma/migrations/20230228203632_name_and_picture_for_user/: migration.sql
backend/prisma/migrations/20230307201349_add_ratings/: migration.sql
backend/prisma/migrations/20230307203430_ratings_video_user_unique/: migration.sql
backend/prisma/migrations/20230307204425_video_add_rating/: migration.sql
backend/repository/: video.ts
backend/src/: auth.rs  auth_middleware.rs  db_schema.rs  main.rs  youtube.rs
backend/src/handler/: graphql_handler.rs
backend/src/schemas/: mod.rs  project_schemas.rs
frontend/: README.md  craco.config.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: Content.css  Content.tsx  Search.css  Search.tsx  SearchVideo.tsx  queries.ts
